# esphome-devices

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md
.ai/: story-1.1-summary.md  story-1.2-summary.md  story-1.3-summary.md  task-6-integration-testing.md
.bmad-core/: install-manifest.yaml
.github/: copilot-instructions.md
_bmad/: config.toml  config.user.toml
_bmad-output/: MIGRATION-v4-to-v6.md  QUICK-REFERENCE.md  README.md  project-context.md
boards/: a16.yaml  a6.yaml  a6_ethernet.yaml  base.yaml  canbed-rp2040.yaml  s1-pro-multi-sense.yaml  t-connect-pro-display.yaml  t-connect-pro-ethernet.yaml  t-connect-pro.yaml  waveshare-s3-ethernet.yaml  waveshare-s3-rs485-can.yaml  waveshare-s3-wifi.yaml  waveshare-s3.yaml
canbus/: .gitignore  CLAUDE.md  README.md
climate/: CLAUDE.md  mev_demand.yaml  outdoor.yaml  room_sensors.yaml
climate/tests/: compile_can_sensor_receiver.yaml  pyproject.toml
climate/tests/e2e/: conftest.py  test_fancoil_boost.py
climate/tests/harness/: fancoil_boost.yaml
components/: dallas.yaml  dew_point_sensor.yaml  direct_pump.yaml  dual_pid.yaml  failover_sensor.yaml  fancoil.yaml  fancoil_boost_coordinator.yaml  ground_floor_fancoils.yaml  heat_only_radiant.yaml  mev.yaml  mev_demand.yaml  mev_modbus.yaml  mev_modbus_control.yaml  mev_modbus_controller.yaml  mev_modbus_diagnostics.yaml  mev_modbus_telemetry.yaml  mixing_pump.yaml  mixing_valve.yaml  modbus_0_10v.yaml  modbus_0_10v_output.yaml  modbus_analog_output.yaml  modbus_analog_outputs_board.yaml  modbus_master.yaml  modbus_relay_board.yaml  (+31 more)
(+679 files in other folders)
